--- a/index.html
+++ b/index.html
@@ -2,114 +2,110 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Flete por Comuna – RM</title>
+<title>Flete por Comuna – Región Metropolitana</title>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
 <style>
 html, body {
   margin: 0;
-  height: 100%;
-  font-family: Arial, sans-serif;
-}
-
-#container {
-  display: flex;
-  height: 100vh;
-}
-
-#sidebar {
-  width: 260px;
-  background: #f7f7f7;
-  border-right: 1px solid #ccc;
-  padding: 10px;
-  overflow-y: auto;
-}
-
-#sidebar h2 {
-  margin-top: 0;
-  font-size: 18px;
-  text-align: center;
-}
-
-.comuna-item {
-  padding: 8px;
-  margin: 4px 0;
+  padding: 0;
   background: white;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.comuna-item:hover {
-  background: #e6f0ff;
 }
 
 #map {
-  flex: 1;
+  width: 100vw;
+  height: 100vh;
+  background: white;
 }
 
 .info {
   position: absolute;
   bottom: 20px;
-  left: 300px;
+  left: 20px;
   background: white;
-  padding: 10px 14px;
+  padding: 12px 16px;
+  font-family: Arial, sans-serif;
+  font-size: 15px;
   border: 1px solid #ccc;
   border-radius: 6px;
-  z-index: 1000;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  z-index: 999;
+}
+
+.label-comuna {
+  font-size: 11px;
+  font-weight: bold;
+  color: #333;
+  background: transparent;
+  border: none;
+  box-shadow: none;
 }
 </style>
 </head>
 
 <body>
 
-<div id="container">
-  <div id="sidebar">
-    <h2>Comunas</h2>
-    <div id="listaComunas"></div>
-  </div>
-  <div id="map"></div>
-</div>
-
+<div id="map"></div>
 <div class="info" id="info">
-  Seleccione una comuna
+  Pase el mouse sobre una comuna
 </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 <script>
 /* ===============================
-   CONFIGURACIÓN
+   CONFIGURACIÓN GENERAL
 ================================ */
+
 const FLETE_BASE = 7000;
 
-const comunasDespacho = [
-  "Cerrillos","Cerro Navia","Conchalí","El Bosque","Estación Central",
-  "Huechuraba","Independencia","La Cisterna","La Florida","La Granja",
-  "La Pintana","La Reina","Lampa","Las Condes","Lo Barnechea","Lo Espejo",
-  "Lo Prado","Macul","Maipú","Ñuñoa","Pedro Aguirre Cerda","Peñalolén",
-  "Providencia","Pudahuel","Puente Alto","Quilicura","Quinta Normal",
-  "Recoleta","Renca","San Bernardo","San Joaquín","San Miguel",
-  "San Ramón","Santiago","Vitacura"
+// Comunas que SÍ se despachan
+const COMUNAS_ACTIVAS = [
+  "Cerro Navia","Renca","Quilicura","Huechuraba","Recoleta",
+  "Independencia","Conchalí","Quinta Normal","Estación Central",
+  "Cerrillos","Pedro Aguirre Cerda","San Joaquín","Macul",
+  "Peñalolén","La Florida","La Cisterna","San Miguel","Lo Espejo",
+  "La Granja","Providencia","Ñuñoa","Santiago","Maipú","Pudahuel",
+  "Las Condes","La Reina","Vitacura","Lo Prado","El Bosque",
+  "San Ramón","Lampa","Puente Alto","San Bernardo",
+  "La Pintana","Lo Barnechea"
 ];
 
-/* ===============================
-   MAPA
-================================ */
+// Colores alternados
+const colores = [
+  "#8dd3c7","#ffffb3","#bebada","#fb8072","#80b1d3",
+  "#fdb462","#b3de69","#fccde5","#d9d9d9","#bc80bd",
+  "#ccebc5","#ffed6f"
+];
+
+// Crear mapa RM (sin zoom ni paneo)
 const map = L.map('map', {
-  zoomControl: true
+  zoomControl: false,
+  dragging: false,
+  scrollWheelZoom: false,
+  doubleClickZoom: false,
+  boxZoom: false,
+  keyboard: false
 }).setView([-33.45, -70.66], 10);
+
+// Limitar vista
+map.setMaxBounds([
+  [-34.2, -71.6],
+  [-32.8, -69.9]
+]);
 
 /* ===============================
    FUNCIONES
 ================================ */
-function estilo() {
+
+function estilo(feature) {
+  const index = feature.properties.OBJECTID % colores.length;
   return {
-    fillColor: "#7db7ff",
+    fillColor: colores[index],
     weight: 1,
     color: "#555",
-    fillOpacity: 0.8
+    fillOpacity: 0.85
   };
 }
 
@@ -121,7 +117,10 @@ function resaltar(e) {
     fillOpacity: 1
   });
 
-  const nombre = layer.feature.properties.NOM_COM;
+  const nombre =
+    layer.feature.properties.NOM_COM ||
+    layer.feature.properties.COMUNA ||
+    "Comuna";
 
   document.getElementById("info").innerHTML =
     `<strong>${nombre}</strong><br>Flete: $${FLETE_BASE.toLocaleString("es-CL")}`;
@@ -129,30 +128,41 @@ function resaltar(e) {
 
 function resetear(e) {
   geojson.resetStyle(e.target);
+  document.getElementById("info").innerHTML =
+    "Pase el mouse sobre una comuna";
 }
 
 /* ===============================
-   CARGA COMUNAS
+   CARGA COMUNAS RM
 ================================ */
+
 let geojson;
-const capasPorComuna = {};
 
 fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comunas_de_la_RM/FeatureServer/1/query?where=1=1&outFields=*&f=geojson")
   .then(r => r.json())
   .then(data => {
 
-    const filtradas = {
-      type: "FeatureCollection",
-      features: data.features.filter(f =>
-        comunasDespacho.includes(f.properties.NOM_COM)
-      )
-    };
-
-    geojson = L.geoJSON(filtradas, {
+    geojson = L.geoJSON(data, {
+      filter: function (feature) {
+        const nombre =
+          feature.properties.NOM_COM ||
+          feature.properties.COMUNA ||
+          "";
+        return COMUNAS_ACTIVAS.includes(nombre);
+      },
       style: estilo,
       onEachFeature: function (feature, layer) {
-        const nombre = feature.properties.NOM_COM;
-        capasPorComuna[nombre] = layer;
+
+        const nombre =
+          feature.properties.NOM_COM ||
+          feature.properties.COMUNA ||
+          "";
+
+        layer.bindTooltip(nombre, {
+          permanent: true,
+          direction: "center",
+          className: "label-comuna"
+        });
 
         layer.on({
           mouseover: resaltar,
@@ -163,24 +173,10 @@ fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comuna
 
     map.fitBounds(geojson.getBounds());
 
-    // Sidebar
-    const lista = document.getElementById("listaComunas");
-    comunasDespacho.forEach(nombre => {
-      const div = document.createElement("div");
-      div.className = "comuna-item";
-      div.innerText = nombre;
-      div.onclick = () => {
-        const layer = capasPorComuna[nombre];
-        map.fitBounds(layer.getBounds());
-        document.getElementById("info").innerHTML =
-          `<strong>${nombre}</strong><br>Flete: $${FLETE_BASE.toLocaleString("es-CL")}`;
-      };
-      lista.appendChild(div);
-    });
-
   })
   .catch(err => {
-    document.getElementById("info").innerHTML = "Error cargando comunas";
+    document.getElementById("info").innerHTML =
+      "Error cargando comunas RM";
     console.error(err);
   });
 </script>
