--- a/index.html
+++ b/index.html
@@ -25,23 +25,27 @@ html, body {
   top: 15px;
   left: 15px;
   background: white;
-  padding: 10px;
+  padding: 10px 12px;
   border-radius: 6px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
   z-index: 1000;
-  width: 240px;
+  width: 230px;
+  box-sizing: border-box;
 }
 
 #search-box label {
+  display: block;
   font-size: 13px;
   font-weight: bold;
+  margin-bottom: 4px;
 }
 
 #comuna-input {
   width: 100%;
-  margin-top: 6px;
-  padding: 6px;
+  height: 30px;
+  padding: 4px 6px;
   font-size: 14px;
+  box-sizing: border-box;
 }
 
 /* Info */
@@ -73,7 +77,12 @@ html, body {
 
 <div id="search-box">
   <label for="comuna-input">Buscar comuna</label>
-  <input id="comuna-input" list="comunas-list" placeholder="Escriba una comuna">
+  <input
+    id="comuna-input"
+    list="comunas-list"
+    placeholder="Escriba una comuna"
+    autocomplete="off"
+  >
   <datalist id="comunas-list"></datalist>
 </div>
 
