--- a/index.html
+++ b/index.html
@@ -11,21 +11,69 @@ html, body {
   margin: 0;
   padding: 0;
   background: white;
+  font-family: Arial, sans-serif;
 }
 
 #map {
   width: 100vw;
   height: 100vh;
-  background: white;
 }
 
+/* Buscador */
+#search-box {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  background: white;
+  padding: 10px 12px;
+  border-radius: 6px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  z-index: 1000;
+  width: 230px;
+}
+
+#search-box label {
+  display: block;
+  font-size: 13px;
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+#comuna-input {
+  width: 100%;
+  height: 30px;
+  padding: 4px 6px;
+  font-size: 14px;
+  box-sizing: border-box;
+}
+
+/* Dropdown personalizado */
+#dropdown {
+  margin-top: 4px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  max-height: 160px;
+  overflow-y: auto;
+  display: none;
+}
+
+.dropdown-item {
+  padding: 6px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.dropdown-item:hover {
+  background: #f0f0f0;
+}
+
+/* Info */
 .info {
   position: absolute;
   bottom: 20px;
-  left: 20px;
+  left: 15px;
   background: white;
   padding: 12px 16px;
-  font-family: Arial, sans-serif;
   font-size: 15px;
   border: 1px solid #ccc;
   border-radius: 6px;
@@ -46,96 +94,69 @@ html, body {
 
 <body>
 
+<div id="search-box">
+  <label>Buscar comuna</label>
+  <input id="comuna-input" placeholder="Escriba una comuna">
+  <div id="dropdown"></div>
+</div>
+
 <div id="map"></div>
+
 <div class="info" id="info">
-  Pase el mouse sobre una comuna
+  Seleccione una comuna
 </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 <script>
 /* ===============================
-   CONFIGURACIÓN GENERAL
+   CONFIGURACIÓN
 ================================ */
 
 const FLETE_BASE = 7000;
+const ZOOM_INICIAL = 10;
 
-// Comunas activas (Zona A)
 const COMUNAS_ACTIVAS = [
   "Cerrillos","Cerro Navia","Conchalí","El Bosque","Estación Central",
   "Huechuraba","Independencia","La Cisterna","La Florida","La Granja",
-  "La Pintana","La Reina","Lampa","Las Condes","Lo Barnechea","Lo Espejo",
-  "Lo Prado","Macul","Maipú","Ñuñoa","Pedro Aguirre Cerda","Peñalolén",
-  "Providencia","Pudahuel","Puente Alto","Quilicura","Quinta Normal",
-  "Recoleta","Renca","San Bernardo","San Joaquín","San Miguel",
-  "San Ramón","Santiago","Vitacura"
+  "La Pintana","La Reina","Lampa","Las Condes","Lo Barnechea",
+  "Lo Espejo","Lo Prado","Macul","Maipú","Ñuñoa",
+  "Pedro Aguirre Cerda","Peñalolén","Providencia","Pudahuel",
+  "Puente Alto","Quilicura","Quinta Normal","Recoleta","Renca",
+  "San Bernardo","San Joaquín","San Miguel","San Ramón",
+  "Santiago","Vitacura"
 ];
 
-// Colores alternados
 const colores = [
   "#8dd3c7","#ffffb3","#bebada","#fb8072","#80b1d3",
   "#fdb462","#b3de69","#fccde5","#d9d9d9","#bc80bd",
   "#ccebc5","#ffed6f"
 ];
 
-// Crear mapa
+/* ===============================
+   MAPA
+================================ */
+
 const map = L.map('map', {
-  zoomControl: true,
-  minZoom: 10,
-  maxZoom: 13,
+  zoomControl: false,
   dragging: true,
   scrollWheelZoom: true,
-  doubleClickZoom: true,
-  boxZoom: false,
-  keyboard: false
-}).setView([-33.45, -70.66], 10);
+  minZoom: ZOOM_INICIAL,
+  maxZoom: 13
+}).setView([-33.45, -70.66], ZOOM_INICIAL);
 
-// Limitar área RM
+L.control.zoom({ position: 'bottomright' }).addTo(map);
+
 map.setMaxBounds([
   [-34.2, -71.6],
   [-32.8, -69.9]
 ]);
 
-/* ===============================
-   AUTOPISTA AMÉRICO VESPUCIO
-================================ */
-
-const americoVespucioCoords = [
-  [-33.356, -70.670],
-  [-33.370, -70.700],
-  [-33.395, -70.720],
-  [-33.430, -70.730],
-  [-33.455, -70.735],
-  [-33.470, -70.730],
-  [-33.490, -70.720],
-  [-33.520, -70.710],
-  [-33.550, -70.700],
-  [-33.575, -70.680],
-  [-33.590, -70.660],
-  [-33.585, -70.620],
-  [-33.560, -70.590],
-  [-33.525, -70.575],
-  [-33.500, -70.575],
-  [-33.470, -70.585],
-  [-33.430, -70.600],
-  [-33.390, -70.625],
-  [-33.356, -70.670]
-];
-
-const americoVespucio = L.polyline(americoVespucioCoords, {
-  color: "red",
-  weight: 4,
-  opacity: 0.9
-}).addTo(map);
-
-americoVespucio.bindTooltip("Autopista Américo Vespucio", {
-  permanent: true,
-  direction: "center",
-  className: "label-comuna"
-});
+let geojson;
+let capasPorComuna = {};
 
 /* ===============================
-   FUNCIONES
+   FUNCIONES MAPA
 ================================ */
 
 function estilo(feature) {
@@ -148,47 +169,41 @@ function estilo(feature) {
   };
 }
 
-function resaltar(e) {
-  const layer = e.target;
+function destacar(layer) {
+  geojson.resetStyle();
   layer.setStyle({
     weight: 3,
     color: "#000",
     fillOpacity: 1
   });
+}
 
-  const nombre =
-    layer.feature.properties.NOM_COM ||
-    layer.feature.properties.COMUNA ||
-    "Comuna";
-
+function mostrarInfo(nombre) {
   document.getElementById("info").innerHTML =
     `<strong>${nombre}</strong><br>Flete: $${FLETE_BASE.toLocaleString("es-CL")}`;
 }
 
-function resetear(e) {
-  geojson.resetStyle(e.target);
-  document.getElementById("info").innerHTML =
-    "Pase el mouse sobre una comuna";
+function irAComuna(nombre) {
+  const layer = capasPorComuna[nombre];
+  if (!layer) return;
+
+  map.fitBounds(layer.getBounds(), { maxZoom: 12 });
+  destacar(layer);
+  mostrarInfo(nombre);
 }
 
 /* ===============================
-   CARGA COMUNAS RM
+   CARGA COMUNAS
 ================================ */
-
-let geojson;
 
 fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comunas_de_la_RM/FeatureServer/1/query?where=1=1&outFields=*&f=geojson")
   .then(r => r.json())
   .then(data => {
 
     geojson = L.geoJSON(data, {
-      filter: function (feature) {
-        const nombre =
-          feature.properties.NOM_COM ||
-          feature.properties.COMUNA ||
-          "";
-        return COMUNAS_ACTIVAS.includes(nombre);
-      },
+      filter: f => COMUNAS_ACTIVAS.includes(
+        f.properties.NOM_COM || f.properties.COMUNA || ""
+      ),
       style: estilo,
       onEachFeature: function (feature, layer) {
 
@@ -197,27 +212,61 @@ fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comuna
           feature.properties.COMUNA ||
           "";
 
+        capasPorComuna[nombre] = layer;
+
         layer.bindTooltip(nombre, {
           permanent: true,
           direction: "center",
           className: "label-comuna"
         });
 
-        layer.on({
-          mouseover: resaltar,
-          mouseout: resetear
-        });
+        layer.on("click", () => irAComuna(nombre));
       }
     }).addTo(map);
 
     map.fitBounds(geojson.getBounds());
-
-  })
-  .catch(err => {
-    document.getElementById("info").innerHTML =
-      "Error cargando comunas RM";
-    console.error(err);
   });
+
+/* ===============================
+   BUSCADOR CONTROLADO
+================================ */
+
+const input = document.getElementById("comuna-input");
+const dropdown = document.getElementById("dropdown");
+
+input.addEventListener("input", () => {
+  const texto = input.value.toLowerCase();
+  dropdown.innerHTML = "";
+
+  if (!texto) {
+    dropdown.style.display = "none";
+    return;
+  }
+
+  const resultados = COMUNAS_ACTIVAS.filter(c =>
+    c.toLowerCase().includes(texto)
+  );
+
+  resultados.forEach(nombre => {
+    const div = document.createElement("div");
+    div.className = "dropdown-item";
+    div.textContent = nombre;
+    div.onclick = () => {
+      input.value = nombre;
+      dropdown.style.display = "none";
+      irAComuna(nombre);
+    };
+    dropdown.appendChild(div);
+  });
+
+  dropdown.style.display = resultados.length ? "block" : "none";
+});
+
+document.addEventListener("click", e => {
+  if (!document.getElementById("search-box").contains(e.target)) {
+    dropdown.style.display = "none";
+  }
+});
 </script>
 
 </body>
