--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@ html, body {
   box-sizing: border-box;
 }
 
-/* Dropdown personalizado */
 #dropdown {
   margin-top: 4px;
   border: 1px solid #ccc;
@@ -55,6 +54,7 @@ html, body {
   max-height: 160px;
   overflow-y: auto;
   display: none;
+  background: white;
 }
 
 .dropdown-item {
@@ -225,10 +225,35 @@ fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comuna
     }).addTo(map);
 
     map.fitBounds(geojson.getBounds());
-  });
 
+    /* ===============================
+       AMÉRICO VESPUCIO (CAPA SUPERIOR)
+    ================================ */
+
+    const americoVespucioCoords = [
+      [-33.373,-70.685],[-33.395,-70.735],[-33.435,-70.765],
+      [-33.485,-70.765],[-33.535,-70.725],[-33.565,-70.675],
+      [-33.565,-70.615],[-33.545,-70.555],[-33.505,-70.525],
+      [-33.455,-70.525],[-33.405,-70.545],[-33.375,-70.595],
+      [-33.365,-70.645],[-33.373,-70.685]
+    ];
+
+    L.polyline(americoVespucioCoords, {
+      color: "#c00000",
+      weight: 5,
+      opacity: 0.95
+    })
+    .bindTooltip("Autopista Américo Vespucio", {
+      sticky: true,
+      direction: "top",
+      className: "label-comuna"
+    })
+    .addTo(map);
+
+  });
+  
 /* ===============================
-   BUSCADOR CONTROLADO
+   BUSCADOR
 ================================ */
 
 const input = document.getElementById("comuna-input");
@@ -243,23 +268,21 @@ input.addEventListener("input", () => {
     return;
   }
 
-  const resultados = COMUNAS_ACTIVAS.filter(c =>
-    c.toLowerCase().includes(texto)
-  );
+  COMUNAS_ACTIVAS
+    .filter(c => c.toLowerCase().includes(texto))
+    .forEach(nombre => {
+      const div = document.createElement("div");
+      div.className = "dropdown-item";
+      div.textContent = nombre;
+      div.onclick = () => {
+        input.value = nombre;
+        dropdown.style.display = "none";
+        irAComuna(nombre);
+      };
+      dropdown.appendChild(div);
+    });
 
-  resultados.forEach(nombre => {
-    const div = document.createElement("div");
-    div.className = "dropdown-item";
-    div.textContent = nombre;
-    div.onclick = () => {
-      input.value = nombre;
-      dropdown.style.display = "none";
-      irAComuna(nombre);
-    };
-    dropdown.appendChild(div);
-  });
-
-  dropdown.style.display = resultados.length ? "block" : "none";
+  dropdown.style.display = "block";
 });
 
 document.addEventListener("click", e => {
