--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ html, body {
   height: 30px;
   padding: 4px 6px;
   font-size: 14px;
+  box-sizing: border-box;
 }
 
 #dropdown {
@@ -59,6 +60,7 @@ html, body {
 .dropdown-item {
   padding: 6px;
   cursor: pointer;
+  font-size: 14px;
 }
 
 .dropdown-item:hover {
@@ -72,6 +74,7 @@ html, body {
   left: 15px;
   background: white;
   padding: 12px 16px;
+  font-size: 15px;
   border: 1px solid #ccc;
   border-radius: 6px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
@@ -81,7 +84,10 @@ html, body {
 .label-comuna {
   font-size: 11px;
   font-weight: bold;
+  color: #333;
   background: transparent;
+  border: none;
+  box-shadow: none;
 }
 </style>
 </head>
@@ -96,11 +102,17 @@ html, body {
 
 <div id="map"></div>
 
-<div class="info" id="info">Seleccione una comuna</div>
+<div class="info" id="info">
+  Seleccione una comuna
+</div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 <script>
+/* ===============================
+   CONFIGURACIÓN
+================================ */
+
 const FLETE_BASE = 7000;
 const ZOOM_INICIAL = 10;
 
@@ -117,89 +129,166 @@ const COMUNAS_ACTIVAS = [
 
 const colores = [
   "#8dd3c7","#ffffb3","#bebada","#fb8072","#80b1d3",
-  "#fdb462","#b3de69","#fccde5","#d9d9d9","#bc80bd"
+  "#fdb462","#b3de69","#fccde5","#d9d9d9","#bc80bd",
+  "#ccebc5","#ffed6f"
 ];
 
+/* ===============================
+   MAPA
+================================ */
+
 const map = L.map('map', {
+  zoomControl: false,
+  dragging: true,
+  scrollWheelZoom: true,
   minZoom: ZOOM_INICIAL,
   maxZoom: 13
 }).setView([-33.45, -70.66], ZOOM_INICIAL);
 
 L.control.zoom({ position: 'bottomright' }).addTo(map);
 
-let capasPorComuna = {};
-let geojson;
+map.setMaxBounds([
+  [-34.2, -71.6],
+  [-32.8, -69.9]
+]);
 
-function estilo(f) {
+let geojson;
+let capasPorComuna = {};
+
+/* ===============================
+   FUNCIONES MAPA
+================================ */
+
+function estilo(feature) {
+  const index = feature.properties.OBJECTID % colores.length;
   return {
-    fillColor: colores[f.properties.OBJECTID % colores.length],
+    fillColor: colores[index],
     weight: 1,
     color: "#555",
     fillOpacity: 0.85
   };
 }
 
-function irAComuna(nombre) {
-  const layer = capasPorComuna[nombre];
-  if (!layer) return;
-  map.fitBounds(layer.getBounds(), { maxZoom: 12 });
+function destacar(layer) {
   geojson.resetStyle();
-  layer.setStyle({ weight: 3, color: "#000" });
+  layer.setStyle({
+    weight: 3,
+    color: "#000",
+    fillOpacity: 1
+  });
+}
+
+function mostrarInfo(nombre) {
   document.getElementById("info").innerHTML =
     `<strong>${nombre}</strong><br>Flete: $${FLETE_BASE.toLocaleString("es-CL")}`;
 }
 
+function irAComuna(nombre) {
+  const layer = capasPorComuna[nombre];
+  if (!layer) return;
+
+  map.fitBounds(layer.getBounds(), { maxZoom: 12 });
+  destacar(layer);
+  mostrarInfo(nombre);
+}
+
+/* ===============================
+   CARGA COMUNAS
+================================ */
+
 fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comunas_de_la_RM/FeatureServer/1/query?where=1=1&outFields=*&f=geojson")
-.then(r => r.json())
-.then(data => {
+  .then(r => r.json())
+  .then(data => {
 
-  geojson = L.geoJSON(data, {
-    filter: f => COMUNAS_ACTIVAS.includes(f.properties.NOM_COM),
-    style: estilo,
-    onEachFeature: (f, layer) => {
-      const nombre = f.properties.NOM_COM;
-      capasPorComuna[nombre] = layer;
-      layer.bindTooltip(nombre, { permanent: true, direction: "center", className: "label-comuna" });
-      layer.on("click", () => irAComuna(nombre));
-    }
-  }).addTo(map);
+    geojson = L.geoJSON(data, {
+      filter: f => COMUNAS_ACTIVAS.includes(
+        f.properties.NOM_COM || f.properties.COMUNA || ""
+      ),
+      style: estilo,
+      onEachFeature: function (feature, layer) {
 
-  map.fitBounds(geojson.getBounds());
+        const nombre =
+          feature.properties.NOM_COM ||
+          feature.properties.COMUNA ||
+          "";
 
-  /* AMÉRICO VESPUCIO – TRAZADO CORREGIDO */
-  const vespucio = [
-    [-33.379,-70.709],[-33.401,-70.742],[-33.438,-70.760],
-    [-33.485,-70.760],[-33.525,-70.735],[-33.557,-70.690],
-    [-33.557,-70.635],[-33.530,-70.585],[-33.490,-70.555],
-    [-33.440,-70.555],[-33.400,-70.575],[-33.380,-70.620],
-    [-33.375,-70.670],[-33.379,-70.709]
-  ];
+        capasPorComuna[nombre] = layer;
 
-  L.polyline(vespucio, {
-    color: "#c00000",
-    weight: 5,
-    opacity: 0.95
-  }).bindTooltip("Autopista Américo Vespucio", { sticky: true })
+        layer.bindTooltip(nombre, {
+          permanent: true,
+          direction: "center",
+          className: "label-comuna"
+        });
+
+        layer.on("click", () => irAComuna(nombre));
+      }
+    }).addTo(map);
+
+    map.fitBounds(geojson.getBounds());
+
+    /* ===============================
+       AMÉRICO VESPUCIO (CAPA SUPERIOR)
+    ================================ */
+
+    const americoVespucioCoords = [
+      [-33.373,-70.685],[-33.395,-70.735],[-33.435,-70.765],
+      [-33.485,-70.765],[-33.535,-70.725],[-33.565,-70.675],
+      [-33.565,-70.615],[-33.545,-70.555],[-33.505,-70.525],
+      [-33.455,-70.525],[-33.405,-70.545],[-33.375,-70.595],
+      [-33.365,-70.645],[-33.373,-70.685]
+    ];
+
+    L.polyline(americoVespucioCoords, {
+      color: "#c00000",
+      weight: 5,
+      opacity: 0.95
+    })
+    .bindTooltip("Autopista Américo Vespucio", {
+      sticky: true,
+      direction: "top",
+      className: "label-comuna"
+    })
     .addTo(map);
-});
 
-/* BUSCADOR */
+  });
+  
+/* ===============================
+   BUSCADOR
+================================ */
+
 const input = document.getElementById("comuna-input");
 const dropdown = document.getElementById("dropdown");
 
 input.addEventListener("input", () => {
+  const texto = input.value.toLowerCase();
   dropdown.innerHTML = "";
-  const t = input.value.toLowerCase();
-  if (!t) return dropdown.style.display = "none";
 
-  COMUNAS_ACTIVAS.filter(c => c.toLowerCase().includes(t)).forEach(c => {
-    const d = document.createElement("div");
-    d.className = "dropdown-item";
-    d.textContent = c;
-    d.onclick = () => { input.value = c; dropdown.style.display = "none"; irAComuna(c); };
-    dropdown.appendChild(d);
-  });
+  if (!texto) {
+    dropdown.style.display = "none";
+    return;
+  }
+
+  COMUNAS_ACTIVAS
+    .filter(c => c.toLowerCase().includes(texto))
+    .forEach(nombre => {
+      const div = document.createElement("div");
+      div.className = "dropdown-item";
+      div.textContent = nombre;
+      div.onclick = () => {
+        input.value = nombre;
+        dropdown.style.display = "none";
+        irAComuna(nombre);
+      };
+      dropdown.appendChild(div);
+    });
+
   dropdown.style.display = "block";
+});
+
+document.addEventListener("click", e => {
+  if (!document.getElementById("search-box").contains(e.target)) {
+    dropdown.style.display = "none";
+  }
 });
 </script>
 
