--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="es">
 <head>
 <meta charset="UTF-8">
@@ -227,15 +227,17 @@ fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comuna
     map.fitBounds(geojson.getBounds());
 
     /* ===============================
-       AMÉRICO VESPUCIO (CAPA SUPERIOR)
+       AMÉRICO VESPUCIO (TRAZADO REALISTA)
     ================================ */
 
     const americoVespucioCoords = [
-      [-33.373,-70.685],[-33.395,-70.735],[-33.435,-70.765],
-      [-33.485,-70.765],[-33.535,-70.725],[-33.565,-70.675],
-      [-33.565,-70.615],[-33.545,-70.555],[-33.505,-70.525],
-      [-33.455,-70.525],[-33.405,-70.545],[-33.375,-70.595],
-      [-33.365,-70.645],[-33.373,-70.685]
+      [-33.357,-70.680],[-33.365,-70.705],[-33.380,-70.735],
+      [-33.410,-70.760],[-33.445,-70.770],[-33.485,-70.770],
+      [-33.525,-70.750],[-33.555,-70.725],[-33.580,-70.690],
+      [-33.585,-70.650],[-33.580,-70.615],[-33.565,-70.585],
+      [-33.545,-70.560],[-33.515,-70.545],[-33.485,-70.540],
+      [-33.450,-70.540],[-33.415,-70.550],[-33.385,-70.565],
+      [-33.365,-70.590],[-33.355,-70.620],[-33.357,-70.680]
     ];
 
     L.polyline(americoVespucioCoords, {
@@ -251,7 +253,7 @@ fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comuna
     .addTo(map);
 
   });
-  
+
 /* ===============================
    BUSCADOR
 ================================ */
