--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ function irAComuna(nombre) {
 }
 
 /* ===============================
-   CARGA COMUNAS
+   CARGA COMUNAS RM
 ================================ */
 
 fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comunas_de_la_RM/FeatureServer/1/query?where=1=1&outFields=*&f=geojson")
@@ -231,15 +231,15 @@ fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comuna
    AMÉRICO VESPUCIO (TRAZADO REAL)
 ================================ */
 
-fetch("https://raw.githubusercontent.com/andres-morales/geojson-chile/master/autopistas/americo_vespucio.geojson")
+fetch("https://services7.arcgis.com/mOBPykOjAyBO2ZKk/ArcGIS/rest/services/Autopistas_RM/FeatureServer/0/query?where=UPPER(NOMBRE) LIKE '%VESPUCIO%'&outFields=*&f=geojson")
   .then(r => r.json())
   .then(data => {
 
     L.geoJSON(data, {
       style: {
         color: "#c00000",
-        weight: 5,
-        opacity: 0.95
+        weight: 6,
+        opacity: 1
       }
     })
     .bindTooltip("Autopista Américo Vespucio", {
